test/distributions/corrado/factoryMethods/incompatibleArraySize.1-1.good
incompatibleArraySize.chpl:11: error: halt reached - Domain size mismatch in 'Block.createArray' dimension 0
